# custom-math-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code/include/: math3dlib.h  matrix2.h  matrix3.h  matrix4.h  matrixmxn.h  vector2.h  vector3.h  vector4.h  vectornd.h
code/include/matrix/: matrix2.h  matrix3.h  matrix4.h  matrixmxn.h
code/include/quaternion/: quaternion.h
code/include/vector/: vector2.h  vector3.h  vector4.h  vectornd.h
code/src/: matrix2.cpp  matrix3.cpp  matrix4.cpp  matrixmxn.cpp  vector2.cpp  vector3.cpp  vector4.cpp  vectornd.cpp
code/src/matrix/: matrix2.cpp  matrix3.cpp  matrix4.cpp  matrixmxn.cpp
code/src/quaternion/: quaternion.cpp
code/src/vector/: vector2.cpp  vector3.cpp  vector4.cpp  vectornd.cpp
tests/UnitTests/: CMakeLists.txt
tests/UnitTests/code/src/: main.cpp
tests/UnitTests/code/src/matrix/: matrix2_tests.cpp  matrix3_tests.cpp  matrix4_tests.cpp  matrixmxn_tests.cpp
tests/UnitTests/code/src/quaternion/: quaternion_tests.cpp
tests/UnitTests/code/src/vector/: vector2_tests.cpp  vector3_tests.cpp  vector4_tests.cpp  vectornd_tests.cpp
